src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Master</fullName>
        <description>Master Opportunity</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Defining</fullName>
        </values>
        <values>
            <fullName>Design</fullName>
        </values>
        <values>
            <fullName>Design Win</fullName>
        </values>
        <values>
            <fullName>Developing</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Production Win</fullName>
        </values>
        <values>
            <fullName>Qualifying</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Defining</fullName>
        </values>
        <values>
            <fullName>Design</fullName>
        </values>
        <values>
            <fullName>Design Win</fullName>
        </values>
        <values>
            <fullName>Developing</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Production Win</fullName>
        </values>
        <values>
            <fullName>Qualifying</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <description>Alternate Email</description>
        <label>Alternate Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ask_to_talk_to_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask to talk to Engineering Support/Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;100 Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100-1000 Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000-5000 Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5000+ Employees</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Account_Role__c</fullName>
        <description>Role of the Account related to the Opportunity</description>
        <label>Account Role</label>
        <picklist>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ODM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Annual_Opportunity_DW_K__c</fullName>
        <description>Calculated field for Annual Opportunity DW $K</description>
        <label>Annual Opportunity DW $K</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Application_Segment_Picklist__c</fullName>
        <description>Application Segment</description>
        <label>Application Segment Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Comms Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Embedded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netbook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sever</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smartphone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ultrabook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workstation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Application_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allows the user to select the application for a given opportunity</description>
        <label>Application Segment</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Compliance_Approval_Comments__c</fullName>
        <description>Comments entered by the compliance team related to their approval</description>
        <inlineHelpText>Comments entered by the compliance team related to their approval</inlineHelpText>
        <label>Compliance Approval Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_Compliance_Approval_Status__c</fullName>
        <description>Status of the compliance approval</description>
        <inlineHelpText>Status of the compliance approval</inlineHelpText>
        <label>Compliance Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Hold – Review in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold – Government Authorization Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Compliance_Review__c</fullName>
        <description>Manual flag that is set to &apos;Yes&apos; for opportunities that need GEC review for potential ITAR coverage (potentially due to end use and design-in requirements not captured in automatic flagging)</description>
        <inlineHelpText>Mark this as &apos;Yes&apos; for Opportunities that need a compliance review (criteria: end use requirements, design-in requirements, or MAG Opportunity)</inlineHelpText>
        <label>Compliance Review?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Current_Architecture__c</fullName>
        <description>Current architecture related to the Opportunity</description>
        <label>Current Architecture</label>
        <picklist>
            <picklistValues>
                <fullName>ARM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPU/GPGPU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel Xscale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Competing Arch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPARC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SuperH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x86</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Customer_Product__c</fullName>
        <description>Customer product related to the Opportunity</description>
        <label>Customer Product</label>
        <picklist>
            <picklistValues>
                <fullName>Gateway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_External_ID__c</fullName>
        <description>External ID related to the Opportunity</description>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Flag_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that is checked manually to indicate the opportunity should be reviewed for deletion</description>
        <inlineHelpText>Check this flag if the Opportunity needs to be reviewed for deletion</inlineHelpText>
        <label>Flag for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Form_Factor__c</fullName>
        <label>Form Factor</label>
        <picklist>
            <picklistValues>
                <fullName>FORM FACTOR: 2 IN 1 CONVERTIBLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: SLATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: AIO WITHOUT BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: AIO WITH BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: SYSTEM, USFF (&lt;8L)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: 2 IN 1 DETACHABLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: CLAMSHELL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: ATX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: MINI-ITX MOTHERBOARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: UATX MOTHERBOARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: MOTHERBOARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: ATX MOTHERBOARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: UATX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: TOWER / MINI-TOWER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: SFF / ULTRA SFF / TINY DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: THIN MINI-ITX MOTHERBOARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: MOTHERBOARD, FORM FACTOR: ATX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: USFF (&lt;8L)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: 2 IN 1 DETACHABLE, FORM FACTOR: SLATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: SFF (8L-19L)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: SYSTEM, SFF (8L-19L)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: ATX, FORM FACTOR: MOTHERBOARD, FORM FACTOR: UATX MOTHERBOARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: AIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: AIO, FORM FACTOR: AIO WITHOUT BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: UATX, FORM FACTOR: SFF / ULTRA SFF / TINY DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: TOWER / MINI-TOWER, FORM FACTOR: SFF / ULTRA SFF / TINY DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: ATX, FORM FACTOR: MOTHERBOARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: UATX MOTHERBOARD, FORM FACTOR: MOTHERBOARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: UATX MOTHERBOARD, FORM FACTOR: SYSTEM, SFF (8L-19L)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM FACTOR: SYSTEM, SFF (8L-19L), FORM FACTOR: UATX MOTHERBOARD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Full_Volume_Production_Date__c</fullName>
        <description>Full Volume Production Date</description>
        <label>Full Volume Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Core_Geo_Initiative__c</fullName>
        <description>Influencer-specific field</description>
        <label>Geo Initiative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Intel_Platform__c</fullName>
        <description>Intel Platform related to the Opportunity</description>
        <label>Intel Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Platform 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Last_Activity_Date__c</fullName>
        <description>Date/Time field to capture last activity date.</description>
        <label>Last Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Core_Lead_Geo__c</fullName>
        <label>Lead Geo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Lead_Sub_Geo__c</fullName>
        <label>Lead Sub Geo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Market_Application__c</fullName>
        <description>Market Application associated with the opportunity</description>
        <label>Market Application</label>
        <picklist>
            <picklistValues>
                <fullName>Blade SBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Gateways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms Infrastructure-Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected Services Gateway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Electronics-Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Wearable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop CORP-BIZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop SMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Signage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Embedded-Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy: Commands &amp; Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy: HEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy: Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eWhiteboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health: Fitness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial: Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial: HMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial: Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial: PC-Base Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial: PLC &amp; PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial: Ruggedized/Indu PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Vehicle Infotainment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Market_Segment__c</fullName>
        <description>Market Segment related to an Opportunity</description>
        <label>Market Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Comm Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Embedded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Master_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Master opportunity to a set of children opportunities</description>
        <label>Master Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sub Opportunities</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Nom_Ratification_Date__c</fullName>
        <description>Influencer-specific field</description>
        <label>Nom Ratification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Core_Nominate_As__c</fullName>
        <description>Influencer-specific field</description>
        <label>Nominate As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Nomination_Status__c</fullName>
        <description>Influencer-specific field</description>
        <label>Nomination Status</label>
        <picklist>
            <picklistValues>
                <fullName>Status 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Status 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Status 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Number_of_Follow_on_Opportunities__c</fullName>
        <description>Influencer-specific field</description>
        <label>Number of Follow on Opportunities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Operating_System__c</fullName>
        <description>Operating System Associated with Opportunity</description>
        <label>Operating System</label>
        <picklist>
            <picklistValues>
                <fullName>WINDOWS 8.1, 32-BIT*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDOWS 8.1, 64-BIT*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDOWS 8, 64-BIT*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDOWS 8, 64-BIT*, WINDOWS 8.1, 64-BIT*, ANDROID*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDOWS 8.1, 64-BIT*, OS: WINDOWS 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDROID*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDROID, 64-BIT*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDOWS 8.1, 32-BIT*, WINDOWS 8.1, 64-BIT*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDROID, 32-BIT*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDOWS 8.1, 64-BIT*, WINDOWS 7*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS: WINDOWS 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS: WINDOWS 8, WINDOWS BLUE*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDOWS 8.1, 64-BIT*, WINDOWS 8, 32-BIT*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS: WINDOWS 7, OS: WINDOWS 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDOWS 8, 64-BIT*, WINDOWS 7*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDOWS 8, 32-BIT*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDROID*, WINDOWS 8, 64-BIT*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDOWS 8, 64-BIT*, WINDOWS 8.1, 64-BIT*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS: DUAL OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOOGLE CHROME OS*, GOOGLE CHROME OS*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDOWS 8.1, 64-BIT*, OS: WINDOWS 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDOWS COMPACT 13 EMBEDDED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDROID*, ANDROID, 32-BIT*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDOWS 8.1, 64-BIT*, WINDOWS 8, 64-BIT*, WINDOWS 8, 32-BIT*, WINDOWS 8.1, 32-BIT*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDOWS 8, 32-BIT*, WINDOWS 8.1, 64-BIT*, WINDOWS 8.1, 32-BIT*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDOWS 8.1, 64-BIT*, WINDOWS 8, 64-BIT*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDROID*, WINDOWS 8.1, 64-BIT*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDOWS 8.1, 64-BIT*, ANDROID*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDOWS 7*, WINDOWS 8.1, 64-BIT*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDOWS 8.1, 64-BIT*, WINDOWS 8.1, 32-BIT*</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Opportunity_Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Bundle</label>
        <referenceTo>Opportunity_Bundle__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Opportunity_Category__c</fullName>
        <label>Opportunity Category</label>
        <picklist>
            <picklistValues>
                <fullName>Embedded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3SO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSC Embedded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSC ITDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSC Reseller</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Opportunity_Country__c</fullName>
        <description>Influencer-specific field</description>
        <label>Opportunity Country</label>
        <picklist>
            <picklistValues>
                <fullName>Country 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Partner_Name__c</fullName>
        <description>Name of the partner related to the Opportunity</description>
        <label>Partner Name</label>
        <picklist>
            <picklistValues>
                <fullName>Kontron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radisys</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Platform_Status__c</fullName>
        <description>Status of the platform</description>
        <label>Platform Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-ATS Qualified Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won Platform</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Product_Interest__c</fullName>
        <description>Product interests related to the Opportunity</description>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Intel® Atom™ Processors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel® Core™ Processors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel® EP80579 Integrated Processor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel® Xeon® Processors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethernet Controllers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solid State Drives (SSD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Core_Production_End_Date__c</fullName>
        <description>Production End Date</description>
        <label>Production End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Core_Production_Geo__c</fullName>
        <description>Production geo related to the Opportunity</description>
        <label>Production Geo</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IJKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Production_Start_Date__c</fullName>
        <description>Production start date</description>
        <label>Production Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Core_Project_Phase__c</fullName>
        <description>Phase of the project</description>
        <label>Project Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Explore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Project_Size__c</fullName>
        <description>Size of the project</description>
        <label>Project Size</label>
        <picklist>
            <picklistValues>
                <fullName>&gt;$10,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10,000,000 - $5,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000,000 - $1,000,0000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;$1,000,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>